add some swagger docs for controllers
